feat: notifications + new tab logic / don't run, it'll explode your computer (endless new tab opening loop)

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Non-Fungible Apps",
   "version": "1.0",
   "description": "WIP!",
-  "permissions": ["activeTab", "scripting", "storage", "tabs"],
+  "permissions": ["notifications", "activeTab", "scripting", "storage", "tabs"],
   "options_page": "options.html",
   "background": {
     "service_worker": "service-worker.js"
