--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "permissions": ["notifications", "activeTab", "scripting", "storage", "tabs"],
   "options_page": "options.html",
   "background": {
-    "service_worker": "service-worker.js"
+    "service_worker": "service-worker.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "popup.html",
